test/error/LexLiteralFloatTrailingLetters.ci
public static class Test
{
	public static bool Run()
	{
		float f = 0.0f; //ERROR: Invalid floating-point number
		return true;
	}
}
